# iota-compute-engine

./: .gitignore  Cargo.toml  Procfile  README.md  Rocket.toml  text.txt
example/: Cargo.toml
example/src/: main.rs
examples/wasm/: Cargo.toml  README.md  example.wasm  example.wat
examples/wasm/src/: main.rs
icp-cli/: Cargo.toml  README.md
icp-cli/src/: main.rs  tangle.rs
icp-engine/: Cargo.toml
icp-engine/src/: lib.rs  main.rs  paste_id.rs
icp-macros/: Cargo.toml
icp-macros/src/: lib.rs
icp-storage/: Cargo.toml
icp-storage/src/: lib.rs
icp-wallet/: Cargo.toml  README.md
icp-wallet/src/: lib.rs
src/: main.rs
upload/: README.md
wasi/: Cargo.toml  README.md  wasi.rs
