[package]
name = "iota-compute-engine"
version = "0.1.0"
authors = ["huhn511 <huhn.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
rand = "0.8.2"
anyhow = "1.0.38"


wasmtime = "0.22.0"
wasmtime-wasi = "0.22.0"