[package]
name = "example"
version = "0.1.0"
authors = ["huhn511 <huhn.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.0.2", features = ["full"] }


iota-compute-engine = { path = "../icp-engine" }