[package]
name = "iota-compute-engine-cli"
version = "0.0.1"
authors = ["huhn511 <huhn.dev@gmail.com>"]
edition = "2018"

[[bin]]
name = "cli"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.33"
clap = "3.0.0-beta.2"
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.4"

iota-core = { git = "https://github.com/iotaledger/iota.rs", branch = "dev", default-features = false}