[package]
name = "iota-compute-engine-macros"
version = "0.0.1"
authors = ["huhn511 <huhn.dev@gmail.com>"]
edition = "2018"

[lib]
name = "icp_macros"
path = "src/lib.rs"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0.5", features = ["full"] }
quote = "1"

