[package]
name = "wasm-example"
version = "0.1.0"
authors = ["huhn511 <huhn.dev@gmail.com>"]
edition = "2018"
description = "A sample project with wasm"

[lib]
src = "src/lib.rs"
name = "wasm_example_lib"
crate-type = ["cdylib", "rlib"]

[[bin]] 
src = "src/main.rs"
name = "wasm-example"

[dependencies]
wasm-bindgen = "0.2"